// Copyright (C) 2016, 2017 Nicolas Lamirault <nicolas.lamirault@gmail.com>

// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at

//     http://www.apache.org/licenses/LICENSE-2.0

// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax="proto3";

package info;

// for grpc-gateway
import "google/api/annotations.proto";

message GetInfoRequest {
}

message GetInfoResponse {
  string version = 1;
  repeated WebServiceStatus webservices = 2;
}

message WebServiceStatus {
  string endpoint = 1;
  string name = 2;
  string status = 3;
  string text = 4;
}

service InfoService {
  rpc Get(GetInfoRequest) returns (GetInfoResponse) {
    option (google.api.http) = {
      get : "/info"
    };
  }
}
